--- a/package.json
+++ b/package.json
@@ -2,18 +2,6 @@
   "name": "examples-app",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.6.2",
-    "axios": "^0.22.0",
-    "cra-template": "1.1.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.5",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
-    "redux": "^4.1.1",
-    "redux-thunk": "^2.3.0"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -38,8 +26,29 @@
       "last 1 safari version"
     ]
   },
+  "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
+    "axios": "^0.22.0",
+    "cra-template": "1.1.2",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
+    "unsplash-js": "^7.0.15"
+  },
   "devDependencies": {
-    "web-vitals": "^2.1.0",
-    "redux-devtools-extension": "^2.13.9"
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^12.1.2",
+    "jest-dom": "^4.0.0",
+    "redux-devtools-extension": "^2.13.9",
+    "web-vitals": "^2.1.0"
+  },
+  "resolutions": {
+    "moment": "^2.29.1"
   }
 }
